# powerhouse-assistant

./: Address_Book_Handler.py  LICENSE  Manifest.in  Note.py  NoteHandler.py  README.md  __main__.py  addbook - 2.py  addressbook.py  addressbook_data.py  calculator.py  notebook.py  pyproject.toml  requirements.txt  setup.py  snake.py  sort_files.py  test.py
AddressBook/: Address_Book_Handler.py  addressbook.py
GameGooseKiller/: Game_goose.py
NoteBook/: Note.py  Note_Book_Handler.py
OtherModules/: Sort_Files.py  Сalculator.py
game goose-killer/: game_goos.py
powerhouse_assistant/: Address_Book_Handler.py  Note_Book_Handler.py  Snake.py  Sort_Files.py  addressbook.py  addressbook_data.py  main.py
powerhouse_assistant/GameGooseKiller/: Game_goose.py
powerhouse_helper/: Address_Book_Handler.py  Note.py  Note_Book_Handler.py  Snake.py  Sort_Files.py  addressbook.py  main.py  Сalculator.py
snake/: snake.py
src/test_version_powerhouse_helper/: __main__.py
src/test_version_powerhouse_helper/AddressBook/: Address_Book_Handler.py  addressbook.py
src/test_version_powerhouse_helper/GameGooseKiller/: Game_goose.py
src/test_version_powerhouse_helper/NoteBook/: Note_Book_Handler.py
test_version_powerhouse_helper/: Address_Book_Handler.py  Note.py  Note_Book_Handler.py  __main__.py  addressbook.py  main.py
test_version_powerhouse_helper/AddressBook/: Address_Book_Handler.py  addressbook.py  addressbook_data.py
test_version_powerhouse_helper/NoteBook/: Note_Book_Handler.py
